# i-tuirate

./: CMakeLists.txt  README.md  flake.nix
app/: CMakeLists.txt  main.cpp
include/i-tuirate/: logic.h  ui.h
src/: CMakeLists.txt  ui.cpp
